#19 : methods interface admin